Minor bug fix: Create.xhtml and Edit.xhtml use pattern attribute in calendar instead of <f:convertDateTime> tag. Dates now display and are saved properly. Also fixed the button alignment by left aligning only ui-button elements that are inside the datatable footer sections. So the calendar button will now properly show up to the right of the textbox, not to the left.

--- a/src/org/netbeans/modules/web/primefaces/crudgenerator/resources/pfcrud.css
+++ b/src/org/netbeans/modules/web/primefaces/crudgenerator/resources/pfcrud.css
@@ -12,6 +12,6 @@
     text-align: center;
     text-transform: uppercase;
 }
-.ui-button{
+.ui-datatable-footer .ui-button{
     float: left;
  }
